[package]
name = "get_links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
scraper = "0.18.1"
regex = "1.10.2"
lazy_static = "1.4"
